--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,62 +3,38 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@Article{applicability,
+	author = {G. Farkas},
+	title = {{Applicability of open-source web mapping libraries for building massive Web GIS clients}},
+	journal = {Journal of Geographical Systems},
+	volume = {19},
+	number =  {3},
+	pages = {273--295},
+	year = {2017},
+    html = {https://link.springer.com/article/10.1007/s10109-017-0248-z},
+    pdf = {comparison_clients.pdf},
+    abstract = {The increasing capabilities of web browsers and the growing spread of JavaScript have an impact on the development of web-based GIS systems. While in traditional Web GIS applications the client-side component is only responsible for creating representation models, modern geographically enabled JavaScript libraries have extended capabilities, making them capable of doing extensive tasks, like complex geographical analyses. This paper identifies the most capable libraries for being the basis of a Web GIS client (Cesium, Leaflet, NASA Web World Wind, OpenLayers 2, and OpenLayers 3) and compares them. The libraries are compared by their GIS feature coverage and some quality metrics. OpenLayers 3 is identified for being the most capable library by supporting nearly 60\% of the examined GIS features, its small size, and moderate learning curve. For comparing the learning curves of JavaScript libraries, a new metric named Approximate Learning Curve for JavaScript is proposed, which is based on other software metrics.}
 }
 
-@article{einstein1950meaning,
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@Article{normalized_indices_baranya,
+	author = {G. Farkas},
+	title = {{Normalizált indexek alkalmazhatósága automatikus területi klasszifikációhoz Magyarországon Baranya megye példáján}},
+	journal = {Természetföldrajzi Közlemények},
+	volume = {2015},
+	number =  {1},
+	pages = {13--21},
+	year = {2015},
+    html = {http://tfk.foldrajz.ttk.pte.hu/node/41},
+    pdf = {normalizalt_indexek_baranya.pdf},
+    abstract = {Az első multispektrális adatok megjelenése óta foglalkoztatja a kutatókat az ilyen adatok kiértékelése különböző módszerekkel. Igazán elterjedt módszer az automatikus, vagy felügyelt klasszifikáció, mely során különböző spektrális tartományokban készült képekből dimenziócsökkentő eljárásokkal osztályozott állományok készülnek. Egyik fontos célja a klasszifikációs eljárásoknak a felszínborítás térképezése, monitorozása. A tanulmány erre a célra mutat be részletesen egy teljesen automatizálható, költséghatékony megoldást. Bár a kutatáshoz használt, népszerűbbek közé tartozó négy normalizált index (NDVI, NDWI, NDBaI, NDBI) alkalmazhatósága Magyarország területén megkérdőjelezhető, a spektrálisan leginkább eltérő felszínborítási formákat (vízborítás, sűrű növényzet, kopár terület) az ezekkel készült klasszifikáció jól kirajzolja.}
 }
 
-@article{PhysRev.47.777,
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777}
+@MastersThesis{comparison_libraries,
+	author = {G. Farkas},
+	title = {{Comparison of Web Mapping Libraries for Building WebGIS Clients}},
+	school = {University of Pécs, Pécs, Hungary},
+	year = {2015}
+    pdf = {comparison_web_mapping_libraries_webgis.pdf},
+    supp = {thesis}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
