Update bib style

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,7 +33,7 @@
 	author = {G. Farkas},
 	title = {{Comparison of Web Mapping Libraries for Building WebGIS Clients}},
 	school = {University of Pécs, Pécs, Hungary},
-	year = {2015}
+	year = {2015},
     pdf = {comparison_web_mapping_libraries_webgis.pdf},
     supp = {thesis}
 }
