--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,7 +34,26 @@
 	title = {{Comparison of Web Mapping Libraries for Building WebGIS Clients}},
 	school = {University of Pécs, Pécs, Hungary},
 	year = {2015},
+    pages = {88},
     pdf = {comparison_web_mapping_libraries_webgis.pdf},
     supp = {thesis}
+}
+
+@Book{masteringol3,
+    author = {G. Farkas},
+    title = {Mastering OpenLayers 3},
+    year = {2016},
+    publisher = {Packt Publishing Ltd.},
+    pages = {308},
+    html = {https://www.packtpub.com/web-development/mastering-openlayers-3}
+}
+
+@Book{practicalgis,
+    author = {G. Farkas},
+    title = {Practical GIS},
+    year = {2017},
+    publisher = {Packt Publishing Ltd.},
+    pages = {372},
+    html = {https://www.packtpub.com/application-development/practical-gis}
 }
 
