--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,7 +32,7 @@
 @MastersThesis{comparison_libraries,
 	author = {G. Farkas},
 	title = {{Comparison of Web Mapping Libraries for Building WebGIS Clients}},
-	school = {University of Pécs, Pécs, Hungary},
+	school = {University of Pécs, Pécs, Hungary.},
 	year = {2015},
     pages = {88},
     pdf = {comparison_web_mapping_libraries_webgis.pdf},
