Update projects and publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -64,6 +64,7 @@
     booktitle = {{Proceedings of the 4th International Conference on Geographical Information Systems Theory, Applications and Management (GISTAM 2018)}},
     pages = {262--268},
     pdf = {alternative_raster_display_model.pdf},
+    html = {http://www.scitepress.org/PublicationsDetail.aspx?ID=ypwhdIfn/do=&t=1},
     abstract = {In this paper we present an alternative, vector based coverage model, which could extend the traditional raster model. As the coverage model only changes the representation model behind rasters, it needs minimal effort to implement, mitigates current raster limitations, and has minimal performance impact due to modern computers' increased computing capacities. Moreover, coverages could still get the benefits of the traditional raster model. As the data model remains the same, traditional raster based operations can still be applied on rectangular coverages, while other patterns can still benefit at least from matrix algebra. Finally, not only current raster operations could be kept, but there would not be any limitations of developing new ones optimized for different coverage patterns (e.g. hexagonal operations).}
 }
 
