--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -85,7 +85,7 @@ render the Spearfish60 DEM from GRASS GIS’s example data feasibly. While both 
 for the first viable implementation.}
 }
 
-@Article{hardware-accel,
+@Article{hardware_accel,
     author = {G. Farkas},
     title = {Hardware-Accelerating 2D Web Maps: A Case Study},
     year = {2019},
